--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.5",
     "@babel/eslint-parser": "^7.21.3",
+    "classnames": "^2.3.2",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^8.39.0",
     "eslint-config-airbnb": "^19.0.4",
